# Pub-Sub-System

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile.bak  README.md  run.sh
.cmake/api/v1/reply/: cache-v2-a3d5464b1d8bcb1b9750.json  cmakeFiles-v1-538d7215692a8a0c44c8.json  codemodel-v2-dcefaf20f80857d11d91.json  directory-external.crow-1cc530b5e9c46bad37a9.json  index-2025-05-18T11-47-56-0000.json  target-pubsub-618d61d4b1dcd7a9491f.json  target-uninstall-4a6ed812db6fd3c10c3b.json  toolchains-v1-6144d69a77492ab76425.json
.github/workflows/: github-ci-doxygen.yml  github-ci-tests.yml
docs/html/: _topic_manager_8cpp.html  _topic_manager_8cpp__dep__incl.map  _topic_manager_8cpp__dep__incl.md5  _topic_manager_8cpp__incl.map  _topic_manager_8cpp__incl.md5  _topic_manager_8cpp_source.html  _topic_manager_8h.html  _topic_manager_8h.js  _topic_manager_8h__dep__incl.map  _topic_manager_8h__dep__incl.md5  _topic_manager_8h__incl.map  _topic_manager_8h__incl.md5  _topic_manager_8h_source.html  annotated.html  annotated_dup.js  class_topic_manager-members.html  class_topic_manager.html  class_topic_manager.js  class_topic_manager_a4a9860f07668c00784dfb92d578c66e9_icgraph.map  class_topic_manager_a4a9860f07668c00784dfb92d578c66e9_icgraph.md5  class_topic_manager_a6652f2f1f0b8819ffd8a4ca08ea2c976_icgraph.map  class_topic_manager_a6652f2f1f0b8819ffd8a4ca08ea2c976_icgraph.md5  class_topic_manager_a9f834a9b077ce2e7c393846884956716_icgraph.map  class_topic_manager_a9f834a9b077ce2e7c393846884956716_icgraph.md5  class_topic_manager_adbe6976205cc8a10452ed554274b170f_icgraph.map  class_topic_manager_adbe6976205cc8a10452ed554274b170f_icgraph.md5  classes.html  cors_8h.html  cors_8h.js  cors_8h__dep__incl.map  cors_8h__dep__incl.md5  cors_8h__incl.map  cors_8h__incl.md5  cors_8h_source.html  dir_000000_000001.html  dir_000002_000001.html  dir_000003_000001.html  dir_000003_000002.html  dir_1160edd46257f808ae6c05611b5a7af6.html  dir_1160edd46257f808ae6c05611b5a7af6.js  (+64 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  files_3.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
docs/latex/: _topic_manager_8cpp.tex  _topic_manager_8cpp__dep__incl.md5  _topic_manager_8cpp__incl.md5  _topic_manager_8cpp_source.tex  _topic_manager_8h.tex  _topic_manager_8h__dep__incl.md5  _topic_manager_8h__incl.md5  _topic_manager_8h_source.tex  annotated.tex  class_topic_manager.tex  class_topic_manager_a4a9860f07668c00784dfb92d578c66e9_icgraph.md5  class_topic_manager_a6652f2f1f0b8819ffd8a4ca08ea2c976_icgraph.md5  class_topic_manager_a9f834a9b077ce2e7c393846884956716_icgraph.md5  class_topic_manager_adbe6976205cc8a10452ed554274b170f_icgraph.md5  cors_8h.tex  cors_8h__dep__incl.md5  cors_8h__incl.md5  cors_8h_source.tex  dir_1160edd46257f808ae6c05611b5a7af6.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  gtest__main_8cpp.tex  gtest__main_8cpp__incl.md5  gtest__topic__manager_8cpp.tex  gtest__topic__manager_8cpp__incl.md5  gtest__topic__manager_8cpp_a3379cd779ce2becdeb2a0e1b9aa84a8e_cgraph.md5  gtest__topic__manager_8cpp_afed29684baaeb0a79dcaa21d9fcf31f3_cgraph.md5  main_8cpp.tex  main_8cpp__incl.md5  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  main_8h.tex  main_8h_source.tex  namespaces.tex  namespacetest__pubsub.tex  refman.tex  struct_c_o_r_s.tex  struct_c_o_r_s_1_1context.tex  test__main_8cpp.tex  (+6 more)
include/: TopicManager.h  cors.h  main.h
src/: TopicManager.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp  test_topic_manager.cpp
tests/catch2/: test_main.cpp  test_topic_manager.cpp
tests/gtests/: CMakeLists.txt  gtest_main.cpp  gtest_topic_manager.cpp
web/: publish.html  subscribe.html
